--- a/vimwiki/index.wiki
+++ b/vimwiki/index.wiki
@@ -4,7 +4,7 @@
  == [[./Todo/2013|2013]] ==
 ----
  = Blog =
- == vim ==
+ == [[./Blog/vim|vim]] ==
  == [[./Blog/fortran|fortran]] ==
 ----
  = Diary =
